修复sse错失记忆，安卓测试版本发行